Self/playorg/Unpackaged/Config/objects/Third_Party_Provider__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Third Party Provider</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Third Party Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>